fixed PA indicator not being properly removed on sentence / TSCs, fixed PA indicator being too small on hint cards

--- a/src/scss/base/style.scss
+++ b/src/scss/base/style.scss
@@ -803,6 +803,10 @@ ruby rt {
   display: none;
 }
 
+.expression--remove-pa-indicator .pa-indicator > .pa-indicator__svg {
+  display: none;
+}
+
 
 
 .sentence-quote {
